# Deeting

./: .env.example  .gitignore  AGENTS.md  claude.md  docker-compose.develop.yml  docker-compose.images.yml  provider-presets.json  pytest.ini  todo.md  train.txt  ui-prompt.md
.kilocode/: mcp.json
backend/: main.py  pyproject.toml
backend/docs/: provider-preset-design.md
backend/scripts/: run_provider_discovery.py  seed_standard_providers.py
backend_old/: .dockerignore  celerybeat-schedule  entrypoint.sh
backend_old/apiproxy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend_old/app/: celery_app.py  deps.py  jwt_auth.py  logging_config.py  qdrant_client.py  routes.py  settings.py  upstream.py
backend_old/docs/: AGENT_PLUGIN_GUIDE.md
backend_old/scripts/: backfill_metrics.py  demo_agent_task.py  fix_alembic_version_table.py  install_playwright.sh  run_celery.sh  test_universal_adapter.py
backend_old/tests/: SKIP_TEST_GUIDE.md  test_admin_agent_routes.py  test_alembic_config.py  test_api_key_routes.py  test_assistants_list_includes_system_prompt.py  test_bridge_agent_token_routes.py  test_bridge_gateway_unavailable.py  test_candidate_retry_failure_marking.py  test_capability_resolver_integration.py  test_celery_config.py  test_cli_config_routes.py  test_conversation_clear_messages.py  test_conversation_messages_streaming_db_fallback.py  test_conversation_title_fallback.py  test_conversation_video_generations.py  test_docs_routes_disabled_in_production.py  test_logging_dir_resolution.py  test_media_images_signed_url.py  test_memory_debug_logging.py  test_message_speech_reference_audio.py  test_metrics_buffer_lifecycle.py  test_metrics_dashboard_v2_api.py  test_project_ai_eval_bandit_mvp.py  test_provider_endpoint_resolver.py  test_provider_key_export_backward_compat.py  test_provider_preset_binding.py  test_qdrant_client.py  test_qdrant_collection_service.py  test_request_handler.py  test_request_logs_routes.py  test_security_middleware.py  test_transport_custom_headers.py  test_user_probe_tasks.py  test_user_quota_routes.py  test_user_routes.py  utils.py
deeting/: jest.config.js  middleware.ts  next.config.ts  package-lock.json  package.json
deeting/app/: global-error.tsx  globals.css  layout.tsx
deeting/components/: theme-provider.tsx  theme-transition-overlay.tsx
deeting/constants/: mcp-defaults.ts
deeting/src-tauri/: Cargo.toml  tauri.conf.json
deeting/src-tauri/src/: lib.rs  mcp_bridge.rs
deeting/src-tauri/src/mcp/: commands.rs  error.rs  mod.rs  process.rs  store.rs  types.rs
desktop/: .gitignore  Cargo.toml  README.md
desktop/backend/: Cargo.toml
desktop/backend/src/: main.rs  state.rs
desktop/backend/src/mcp/: hash.rs  mod.rs  process.rs  routes.rs  store.rs  types.rs
docs/: QUICK-START.md  challenger-model.md  clean-slate-remaining-implementation.md  implementation-complete-summary.md  implementation-progress.md  implementation-roadmap.md  orchestrator-comprehensive-consistency-analysis.md  orchestrator-consistency-issues.md  orchestrator-consistency-summary.md  performance-timing-logs.md
fronted_old/: Dockerfile  Dockerfile.dev  next.config.ts  proxy.ts  tsconfig.json
scout/: Dockerfile  README.md  pyproject.toml
tests/: test_proxy_pool.py  test_request_adapter.py
(+1024 files in other folders)
