[workspace]
members = ["backend"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
thiserror = "1.0"
once_cell = "1.19"
anyhow = "1.0"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-stream = "0.1"
futures-util = "0.3"
