[package]
name = "desktop-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
time = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
